<resources>
    <string name="app_name">Debt Ledger</string>
    <string name="self_identifier">You</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to login & signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_switch_to_login">Already a User? Login!</string>
    <string name="action_switch_to_sign_up">Not a User? Sign up!</string>
    <string name="invalid_first_name">First name must not be empty!</string>
    <string name="invalid_last_name">Last name must not be empty!</string>
    <string name="invalid_email">Email is not valid!</string>
    <string name="invalid_password">Password must be a minimum of 6 characters!</string>
    <string name="invalid_confirm_password">Passwords do not match!</string>
    <string name="welcome">"Welcome "</string>
    <string name="goodbye">"Goodbye "</string>
    <string name="login_failed">"Unable to login!"</string>
    <string name="login_failed_incorrect_email_password">"The email or password is incorrect"</string>
    <string name="signup_failed">"Unable to signup!"</string>
    <string name="signup_failed_duplicate_email">The email is already in use</string>

    <!-- Strings related to transactions -->
    <string name="title_create_transaction">Add Debt</string>
    <string name="title_select_contact">Who is Paying?</string>
    <string name="title_select_multiple_contacts">Who Owes?</string>
    <string name="heading_who_is_paying">Who is Paying?</string>
    <string name="heading_who_owes">Who Owes?</string>
    <string name="label_amount">Amount ($)</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_amount">Amount</string>
    <string name="action_submit">Submit</string>
    <string name="action_split">Split</string>
    <string name="invalid_amount">The amount must be a dollar value in format #.##</string>
    <string name="invalid_mismatching_amounts">The amount paid does not match amount owed</string>

    <!-- Strings related to contacts -->
    <string name="requests_to_me">Requests To Me</string>
    <string name="my_requests">My Requests</string>
    <string name="my_contacts">My Contacts</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_select_contact">Select Contact</string>
    <string name="action_select_contacts">Select Contact(s)</string>
    <string name="action_confirm_selection">Confirm Selection</string>
    <string name="title_view_contact">Contact</string>
    <string name="title_select_group_members">Select Group Members</string>
    <string name="response_no_contact_found">No contact found with that email address</string>

    <!-- Strings related to groups -->
    <string name="my_groups">My Groups</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="you_owe">You Owe</string>
    <string name="you_owed">You\'re Owed</string>
    <string name="title_add_group">Add Group</string>
    <string name="title_edit_group">Edit Group</string>
    <string name="title_view_group">Group</string>
    <string name="prompt_group_name">Group Name</string>
    <string name="heading_members">Members</string>

    <!-- Strings related to database/query failures -->
    <string name="failure_contact_requests">Unable to get contact requests</string>
    <string name="failure_deny_contact_request">Unable to deny contact request</string>
    <string name="failure_accept_contact_request">Unable to accept contact request</string>
    <string name="failure_cancel_contact_request">Unable to cancel contact request</string>
    <string name="failure_contacts">Unable to get contacts</string>
    <string name="failure_add_contact">Unable to add contact request</string>
    <string name="failure_add_transactions">Unable to add debts</string>
    <string name="failure_change_name">Unable to update name</string>
    <string name="failure_delete_group">Unable to delete group</string>
    <string name="failure_add_group">Unable to add group</string>
    <string name="failure_update_group">Unable to update group</string>
    <string name="failure_update_group_members">Unable to update group members</string>
    <string name="failure_balances">Unable to get contact balances</string>

</resources>
