<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.groups.CreateEditGroupActivity">

        <ImageView
            android:id="@+id/group_avatar"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle" />

        <TextView
            android:id="@+id/group_avatar_character"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical|center"
            android:textColor="@color/white"
            android:textSize="72dp"
            android:text="G"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textEnd"
            android:text="Group Name"
            android:textSize="24dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/group_avatar"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/member_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="No Members"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/group_name_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/group_owe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/you_owe"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/group_owed"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/group_owed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/you_owed"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@id/group_avatar"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/members_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/heading_members"
            android:textColor="@color/black"
            android:textSize="24sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_avatar" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_members_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/members_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>